# UFES_trajectory

./: LICENSE  README.md
10° Semestre/: README.md
1° Semestre/: README.md
2° Semestre/: README.md
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/: CMakeLists.txt  LICENSE  README.md  build.sh  calculo_pr.c  calculo_pr.h  diff  graph_page.c  graph_page.h  list_page.c  list_page.h  main.c  rb_tree.c  rb_tree.h  read_input.c  read_input.h  search.c  search.h  stop_word_list.c  stop_word_list.h  term.c  term.h  test_examples.sh
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/example/: index.txt  searches.txt  sol.txt
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/example/pages/: c.txt  e.txt
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/example1/: graph.txt  index.txt  searches.txt  sol.txt  stopwords.txt
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/example1/pages/: 10718.txt  10905.txt  10971-8.txt  12096-8.txt  12111.txt  12241.txt  12334-8.txt  1239.txt  12682.txt  13296-8.txt  13589-8.txt  1371.txt  14101.txt  15551-8.txt  15630-8.txt  15974-8.txt  16262-8.txt  17160-8.txt  17661-8.txt  18531-8.txt  18914-8.txt  19848-8.txt  19953-8.txt  20301-0.txt  20474.txt  21225-8.txt  22017-8.txt  22322-8.txt  22593-8.txt  22668-8.txt  23019-8.txt  23792-8.txt  23941-8.txt  24011.txt  24345-8.txt  24614-8.txt  25911-8.txt  26869-8.txt  27603-8.txt  27742-8.txt  (+10 more)
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/example2/: graph.txt  index.txt  searches.txt  sol.txt  sol2.txt  stopwords.txt
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/example2/pages/: 10015.txt  10027.txt  10036-8.txt  10070.txt  10325.txt  10337.txt  10421.txt  10450-8.txt  10468.txt  10473-8.txt  10479.txt  10494-8.txt  10511-8.txt  10534.txt  10649-8.txt  108.txt  1081.txt  10927-8.txt  10931.txt  10957-8.txt  10986.txt  11006.txt  11009.txt  11060.txt  11094.txt  11159-8.txt  11160.txt  11169-8.txt  11174.txt  11197.txt  11289-8.txt  11299-8.txt  11323-8.txt  11404.txt  11458-8.txt  11474.txt  11478.txt  11479.txt  11495.txt  11498-8.txt  (+460 more)
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/tests/: check_files.h
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/tests/calc/: CMakeLists.txt  graph.txt  testCalc.c
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/tests/graph/: CMakeLists.txt  testGraph.c
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/tests/list_page/: CMakeLists.txt  testListPage.c
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/tests/pr_sort/: CMakeLists.txt  testPRSort.c
5° Semestre/Estrutura de Dados II/Trabalhos/Google-s-PageRank/Google-s-PageRank/tests/search/: CMakeLists.txt  test_search.sh
(+2605 files in other folders)
